--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 <title>WEB1 - Welcome</title>
 <meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W717Q1HPBP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W717Q1HPBP');
+</script>
 </head>
 
 <body>
