--- a/2.html
+++ b/2.html
@@ -12,13 +12,19 @@
 
   gtag('config', 'G-W717Q1HPBP');
 </script>
+<style>
+    a {
+        color : black;
+        text-decoration: none;
+    }
+</style>
 </head>
 
 <body>
     <h1><a href = "index.html">WEB</a></h1>
 <ol>
     <li><a href = "1.html">HTML</a></li>
-    <li><a href = "2.html">CSS</a></li>
+    <li><a href = "2.html"style="color:red; text-decoration:underline">CSS</a></li>
     <li><a href = "3.html">JavaScript</a></li>
 </ol>
 
