--- a/2.html
+++ b/2.html
@@ -17,14 +17,26 @@
         color : black;
         text-decoration: none;
     }
+    #active {
+        color : red;
+    }
+    
+    .saw {
+        color:gray;
+    }
+    
+    h1 {
+        font-size : 45px;
+        text-align : center;
+    }
 </style>
 </head>
 
 <body>
     <h1><a href = "index.html">WEB</a></h1>
 <ol>
-    <li><a href = "1.html">HTML</a></li>
-    <li><a href = "2.html"style="color:red; text-decoration:underline">CSS</a></li>
+    <li><a href = "1.html" class="saw">HTML</a></li>
+    <li><a href = "2.html" class="saw" id = "active">CSS</a></li>
     <li><a href = "3.html">JavaScript</a></li>
 </ol>
 
@@ -53,5 +65,18 @@
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/60b7a44cde99a4282a1b039f/1f76ljj4j';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 </html>
