--- a/box.html
+++ b/box.html
@@ -4,29 +4,19 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        /*
-        block level element
-        */
-        h1 {
-            border-width:5px;
-            border-color:red;
-            border-style: solid;
-        }
-        /*
-        inline element
-        */
-        a {
-            border-width:5px;
-            border-color:red;
-            border-style: solid;
+        h1, a {
+            border : 5px solid red;
+            padding : 20px;
+            margin : 20px;
+            display : block;
+            width : 100px;
         }
     </style>
 </head>
 <body>
     <h1>CSS</h1>
-
-    cascading style sheet (<a href = "https://en.wikipedia.org/wiki/CSS">css</a>) is a style sheet language
-
-
+    <h1>CSS</h1>
 </body>
 </html>
+
+<!-- 우클릭 - 검사 누르면 코드사이즈확인가능 -->
