--- a/2.html
+++ b/2.html
@@ -17,14 +17,6 @@
         color : black;
         text-decoration: none;
     }
-    #active {
-        color : red;
-    }
-    
-    .saw {
-        color:gray;
-    }
-    
     h1 {
         font-size : 45px;
         text-align : center;
@@ -41,21 +33,34 @@
     body {
         margin : 0;
     }
+    #grid {
+        display: grid;
+        grid-template-columns : 150px 1fr;
+    }
+    #grid ol {
+        padding-left : 33px;
+    }
+    #grid #article {
+        padding-left : 25px;
+    }
 </style>
 </head>
 
 <body>
     <h1><a href = "index.html">WEB</a></h1>
-<ol>
-    <li><a href = "1.html" class="saw">HTML</a></li>
-    <li><a href = "2.html" class="saw" id = "active">CSS</a></li>
-    <li><a href = "3.html">JavaScript</a></li>
-</ol>
-
-<h2>CSS</h2>
-<p>
-    this is css
-</p>
+    <div id = "grid">
+        <ol>
+            <li><a href = "1.html">HTML</a></li>
+            <li><a href = "2.html">CSS</a></li>
+            <li><a href = "3.html">JavaScript</a></li>
+        </ol>
+            <div id = "article">
+                <h2>CSS</h2>
+                <p>
+                    this is css
+                </p>
+            </div>
+    </div>
 <p>
     <div id="disqus_thread"></div>
 <script>
