--- a/0.html
+++ b/0.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1 - CSS</title>
+<title>WEB1 - Welcome</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -24,9 +24,9 @@
             <li><a href = "3.html">JavaScript</a></li>
         </ol>
         <div id = "article">
-            <h2>CSS</h2>
+            <h2>WEB</h2>
             <p>
-                this is css
+                world wide web
             </p>
         </div>
     </div>
