--- a/1.html
+++ b/1.html
@@ -3,6 +3,7 @@
 <head>
 <title>WEB1 - HTML</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W717Q1HPBP"></script>
 <script>
@@ -12,47 +13,51 @@
 
   gtag('config', 'G-W717Q1HPBP');
 </script>
+
 </head>
 
 <body>
-    <h1><a href = "index.html">WEB</a></h1>
-<ol>
-    <li><a href = "1.html">HTML</a></li>
-    <li><a href = "2.html">CSS</a></li>
-    <li><a href = "3.html">JavaScript</a></li>
-</ol>
+    <h1><a href = "0.html">WEB</a></h1>
+    <div id = "grid">
+        <ol>
+        <li><a href = "1.html">HTML</a></li>
+        <li><a href = "2.html">CSS</a></li>
+        <li><a href = "3.html">JavaScript</a></li>
+        </ol>
+        <div id = "article">
+            <h2>HTML</h2>
+            <p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </p>
+            <p>
+            <a href="https://www.w3.org/TR/html52/" target = "_blank" title="html5.2 specification">Hypertext Markup Language (HTML)</a> <br>
+            is the standard markup language <br>
+            for <strong>creating <u>web</u> pages</strong> 
+            creating web pages and web applications.<br>
+            </p>
+            <img src = "coding.jpg" width = "100%">
+            <p style="margin-top:45px">
+            second paragrpah
+            </p>
 
-<h2>HTML</h2>
-<p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</p>
-<p>
-<a href="https://www.w3.org/TR/html52/" target = "_blank" title="html5.2 specification">Hypertext Markup Language (HTML)</a> <br>
-is the standard markup language <br>
-for <strong>creating <u>web</u> pages</strong> 
-creating web pages and web applications.<br>
-</p>
-<img src = "coding.jpg" width = "100%">
-<p style="margin-top:45px">
-second paragrpah
-</p>
-
-<table>
-    <tr>
-        <td>head</td>
-        <td>98.1%</td>
-    </tr>
-    <tr>
-        <td>body</td>
-        <td>97.9%</td>
-    </tr>
-    <tr>
-        <td>html</td>
-        <td>97.9%</td>
-    </tr>
-</table>
-<p>
+            <table>
+                <tr>
+                    <td>head</td>
+                    <td>98.1%</td>
+                </tr>
+                <tr>
+                    <td>body</td>
+                    <td>97.9%</td>
+                </tr>
+                <tr>
+                    <td>html</td>
+                    <td>97.9%</td>
+                </tr>
+            </table>
+        </div>
+    </div>
     <div id="disqus_thread"></div>
+<p>
 <script>
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
