--- a/3.html
+++ b/3.html
@@ -3,6 +3,7 @@
 <head>
 <title>WEB1 - Java Script</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W717Q1HPBP"></script>
 <script>
@@ -15,17 +16,20 @@
 </head>
 
 <body>
-    <h1><a href = "index.html">WEB</a></h1>
-<ol>
-    <li><a href = "1.html">HTML</a></li>
-    <li><a href = "2.html">CSS</a></li>
-    <li><a href = "3.html">JavaScript</a></li>
-</ol>
-
-<h2>Java Script</h2>
-<p>
-    this is java script
-</p>
+    <h1><a href = "0.html">WEB</a></h1>
+    <div id = "grid">
+        <ol>
+            <li><a href = "1.html">HTML</a></li>
+            <li><a href = "2.html">CSS</a></li>
+            <li><a href = "3.html">JavaScript</a></li>
+        </ol>
+        <div id = "article">
+            <h2>Java Script</h2>
+            <p>
+                this is java script
+            </p>
+        </div>
+    </div>
 <p>
     <div id="disqus_thread"></div>
 <script>
