--- a/ex2.html
+++ b/ex2.html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <input type = "button" value = "hi" onclick = "alert('hi')">
+    <input type = "text" onchange="alert('changed')">
+    <input type = "text" onkeydown = "alert('key down!')">
 </body>
 </html>
